--- a/style.css
+++ b/style.css
@@ -54,6 +54,18 @@ section {
     color: #fff;
 }
 
+.heading {
+    padding-bottom: 2rem;
+    text-align: center;
+}
+
+.heading h1 {
+    font-size: 4rem;
+    color: #fff;
+    padding-bottom: 1rem;
+    text-transform: uppercase;
+}
+
 header {
     position: fixed;
     top: 0; left: 0; right: 0;
@@ -122,6 +134,125 @@ header .navbar a:hover {
 .step-container .step {
     background: #fff;
     margin: 1rem;
+    padding: 2rem;
+    border-radius: .5rem;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.9);
+    text-align: center;
+    flex: 1 1 30rem;
+}
+
+.step-container .step span {
+    font-size: 7rem;
+    color: var(--pink);
+    font-weight: bolder;
+}
+
+.step-container .step h3 {
+    font-size: 3rem;
+    color: var(--black);
+}
+
+.step-container .step p {
+    font-size: 1.5rem;
+    color: #666;
+    padding: 1rem 0;
+}
+
+.vendor .box-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.vendor .box-container .box {
+    flex: 1 1 40rem;
+    margin: 1rem;
+    overflow: hidden;
+    position: relative;
+    border-radius: .5rem;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.9);
+    height: 25rem;
+    cursor: pointer;
+}
+
+.vendor .box-container .box img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.vendor .box-container .box .info {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0; left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(255, 255, 255, .8);
+    text-align: center;
+    transform: scale(1.3);
+    opacity: 0;
+}
+
+.vendor .box-container .box:hover .info{
+    transform: scale(1);
+    opacity: 1;
+}
+
+.vendor .box-container .box:hover img{
+    transform: scale(1.3);
+}
+
+.vendor .box-container .box .info h3 {
+    font-size: 3rem;
+    color: var(--black);
+}
+
+.vendor .box-container .box .info p {
+    font-size: 1.7rem;
+    color: #666;
+    padding: 1rem;
+}
+
+.clients .row {
+    display: flex;
+}
+
+.clients .row .divider {
+    padding: 0 1rem;
+}
+
+.clients .row .box-container .box img {
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+    border-radius: .5rem;
+    border: 2rem solid #fff;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.9);
+}
+
+.clients .row .box-container .box .info {
+    padding: 2rem 0;
+}
+
+.clients .row .box-container .box .info h3 {
+    font-size: 2.5rem;
+    color: #fff;
+}
+
+.clients .row .box-container .box .info p {
+    font-size: 1.7rem;
+    color: #aaa;
+    padding: 1rem 0;
+    font-style: italic;
+}
+
+.clients .row .box-container .box .info p i {
+    color: var(--pink);
+    padding: 0 .5rem;
 }
 
 /* media queries */
